--- a/css/g_navi.css
+++ b/css/g_navi.css
@@ -12,13 +12,19 @@
     height: 100vh;/*ナビの高さ*/
     /*動き*/
     transition: all 0.6s;
-    background-image: url("/image/wall.jpg"); 
+     /* background-image: url("/image/wall.jpg");  */
+    background-color: #fff6f6;
     background-size: cover;
 }
 
 /*アクティブクラスがついたら位置を0に*/
 #g-nav.panelactive{
     right: 0;
+    border: 10px solid #e83223;
+}
+
+.fixed{
+    position: fixed;
 }
 
 /*ナビゲーションの縦スクロール*/
