--- a/css/style.css
+++ b/css/style.css
@@ -292,13 +292,14 @@ header {
 /* main_contents */
 .main_visual {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 10px);
     /* background-image: url("/image/main_02_pc.pn"); 
     background-size: cover;
     background-color: rgb(0 0 0 / 50%); */
     background-color: #fff;
     border: 10px solid #e83223;
     box-sizing: border-box;
+    
 }
 
 .main_visual_wrapper {
@@ -433,12 +434,14 @@ header {
     font-weight: bold;
     line-height: 1.2;
     letter-spacing: 0.5px;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
 .menutable_name span {
     font-size: 0.8rem;
     line-height: 1.2;
     font-weight: normal;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
 .menutable_price {
@@ -742,6 +745,7 @@ dl.menu_grid_left_menutable dd {
 .instagram_title span a {
     color: #000;
     text-decoration: none;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
 
 }
 
