--- a/css/g_navi.css
+++ b/css/g_navi.css
@@ -12,7 +12,7 @@
     height: 100vh;/*ナビの高さ*/
     /*動き*/
     transition: all 0.6s;
-    background-image: url("/image/wall.jpg");  
+    background-image: url("image/wall.jpg");  
     background-color: #fff6f6;
     background-size: cover;
 }
